# mc_agent

./: .gitignore  CONTRIBUTING_TESTS.md  README.md  config.json  design.md  pathfind_test.py  pyproject.toml  run_bot.py  spawn_single_basebot.py
agents/: base_bot.py
behaviors/: __init__.py  forage.py  iron_mining.py  mining.py  shelter.py
bots/: __init__.py  farmer_bot.py
capabilities/: __init__.py  construction.py  crafting.py  fighting.py  items.py  movement.py
commands/: construction_cmds.py  items_cmds.py  mining_cmds.py  movement_cmds.py
config/: settings.json
core/: bot.py  command_registry.py  memory.py
core/utils/: __init__.py  block.py  compat.py  events.py  vec3.py
sidecar/: driver.js
tests/: conftest.py
tests/integration/: test_integration_shelter.py
tests/unit/: test_behaviors.py  test_bot_lifecycle.py  test_bots.py  test_capabilities.py  test_command_registry.py  test_crafting_tree.py  test_entity_matching.js  test_items_cmds.py  test_memory.py
util/: crafting.py  items.py  memory.py  movement.py
