[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mc_agent"
version = "0.1.0"
description = "A modular framework for Minecraft bots using Mineflayer via python-javascript bridge"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "javascript",
    "simple-chalk"
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-mock>=3.6.0",
    "pytest-cov>=4.0.0"
]

[tool.setuptools]
packages = ["core", "bots", "capabilities", "behaviors", "commands"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

